--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     To be part of oragnization can work effectively for personal and professional growth Enviornment
                 </p>
                 <div class="cv">
-                    <button class="btn btn-primary txt-light"><a href="./VAMSHI RESUME OWN.docx">Download
+                    <button class="btn btn-primary txt-light"><a href="./Vamshi krishna chari _Resume new[2022].pdf">Download
                             cv</a></button>
                 </div>
 
